force-app/main/default/objects/maps__TPDataSet__c/maps__TPDataSet__c.object-meta.xml
<CustomObject>
    <label>Territory Planning Data Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>