force-app/main/default/objects/maps__TPDataSet__c/fields/maps__Config__c.field-meta.xml
<CustomField>
    <fullName>maps__Config__c</fullName>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>