force-app/main/default/objects/maps__TPDataSet__c/fields/maps__LastError__c.field-meta.xml
<CustomField>
    <fullName>maps__LastError__c</fullName>
    <description>Additional detail to help explain the latest error</description>
    <label>Last Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>